# vim-destroyer

./: .gitmodules  build.sh  meson.build  shell.nix
include/: arena.h  base.h  color.h  game_input.h  vector.h
include/color/: cie_1931_2deg_lut.h
scripts/: parse_CIE_1931_xyz_lut_csv.py
src/: input.c  main.c  meson.build
